# admin-api

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  README_PERMISSIONS.md  docker-compose.yml  sqlx-cli.toml  test_api.sh  test_auth_api.sh  test_drivers_api.sh  test_permissions_api.sh  test_permissions_system.sh
.sqlx/: query-0081e145ec83c1f6604ee8797bcb7d0b4a0386ff00832ceda0c54052cc85a294.json  query-01f4f6a9eacd58b7b8efdb3a620f0459b783702653921db65c30b9b6477789ed.json  query-05e782657c44813cf91a902536d7ffac527b4b8138546eab14aa9178b7fcd12a.json  query-087b5f065d9a9f16c2b0f224922ad17ee7abab617f2a29896245cb6e51915f42.json  query-08ef5d4197b6e7a4a35cdb9b5296540207ee0a72841a3c7f8d17c6a4294f7285.json  query-0da21dc9669e355c74f32a30cfd6fa93c6cd92d7e55b5747ed6371db9e087b45.json  query-11b6ea2c633e598a9080fe6d6d2ca3cda4a7e576ef63cd8490b63d6ce843b4a4.json  query-146b77c43a59718e21c70190259528479d6c5e13a1ce917016e3fb1233991482.json  query-1ee9762ec8954910f192cdea65c0c27893add37f744653df664fc4907a67d832.json  query-1f7fb6b976579e6e75c9d7cb4fb307bbf33d641ed6124d0b63ac78c1afa50022.json  query-20b22f06e6e9ee58cb2970a68613bceea2321b2f21afa335f3bd74f57ac25793.json  query-229c2a135c54c346f23d3cafe389bb3e06173d0af18f4b7ee00414086a8b0f9e.json  query-2a136b2c39b5d43fdafae0af31e0533359e7b0a986f15cb67c69ef06090d6932.json  query-3186d6ed629d4a0219222e42ce7fa817fc31de721a8382b64871ad98df3a7332.json  query-328cb5f0719e003ca85642ab08826401f8d4b39a0c5e56ad19fa2c4b5fcb93c0.json  query-395eef77c7724a1e334cac8ca8971dfafd0a3ab23e9eb43a5f6758603b4be154.json  (+59 more)
docs/: API_USAGE.md  (+7 more)
(+70 files in other folders)
