[package]
name = "plannify-admin-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }
postgres = "0.19.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
lazy_static = "1.4"
regex = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Password hashing
argon2 = "0.5.3"

# JWT
jsonwebtoken = "9.2"

# Environment variables
dotenvy = "0.15"

# HTTP status codes
http = "1.3"
futures = "0.3.31"
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
